Refactor the various Catalina and Jasper shell scripts to implement the following improvements: 1. The ability to handle spaces in the CATALINA_HOME, JASPER_HOME, or JAVA_HOME    environment variables for both Windows and Unix. 2. Enable jdb and jpda support on Windows (these were only available on Unix    previously) and made the Unix version work with 1.3 and 1.4 JDKs. 3. Enable the scripts to run on Windows 98 and ME (the DOS shell on these    platforms do not support "=" characters in environment variables and does    not support the "^" escape character) 4. Accurate determination of CATALINA_HOME for Unix when the executable is    a softlink ($0 for a softlink is the path to the softlink, not the path    to the file that the softlink points too). Thanks to the jakarta-ant    developers for this fix. 5. Centralization of the JAVA_HOME checking and setting of the common portion    of the CLASSPATH. 6. Provided a means to override the XML parser provided with JDK 1.4 using the    JDK 1.4 -Djava.endorsed.dirs property. Currently, this property is not set    pending further testing of this option.
Note: Some of the changes do not work with JDK 1.2 (e.g. new jpda option).
However, Tomcat currently does not compile with JDK 1.2, so I did not think
that would be a big issue. If JDK 1.2 support is important, I will test out
the scripts when a JDK 1.2 build is available.


git-svn-id: https://svn.apache.org/repos/asf/tomcat@287326 13f79535-47bb-0310-9956-ffa450edef68